fix crud product and category